[package]
name = "red-dragon-inn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand       = "0.8.4"
rocket     = "0.5.0-rc.1"
serde      = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio      = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
uuid       = { version = "0.8.2", features = ["serde", "v4"] }
